- Fixed: [#2372] worldguard error